bug fix in pricing wrap

--- a/src/style.scss
+++ b/src/style.scss
@@ -663,11 +663,6 @@ body {
   }
 }
 
-/* Extra-large devices (large desktops, TVs) */
-@media (min-width: 1200px) {
-  /* Styles for extra-large devices go here */
-}
-
 .pricing-Wrap {
   display: flex;
   flex-direction: column;
@@ -677,6 +672,7 @@ body {
   height: 1500px;
   width: 75%;
   margin-top: 1rem;
+  margin-bottom: 5rem;
 
   .pricing-Title {
     display: flex;
@@ -803,9 +799,13 @@ body {
     border-color: $buttonBackGroundColor;
     cursor: pointer;
   }
+}
 
-  /* Small devices (phones) */
-  @media (max-width: 767px) {
+/* Small devices (phones) */
+@media (max-width: 767px) {
+  .pricing-Wrap {
+    height: 3500px;
+
     .pricing-Title {
       display: flex;
       text-align: center;
@@ -841,9 +841,13 @@ body {
       }
     }
   }
+}
 
-  /* Medium devices (tablets) */
-  @media (min-width: 768px) and (max-width: 991px) {
+/* Medium devices (tablets) */
+@media (min-width: 768px) and (max-width: 991px) {
+  .pricing-Wrap {
+    height: 3500px;
+
     .pricing-Title {
       display: flex;
       text-align: center;
@@ -879,9 +883,13 @@ body {
       }
     }
   }
+}
 
-  /* Large devices (laptops/desktops) */
-  @media (min-width: 992px) and (max-width: 1199px) {
+/* Large devices (laptops/desktops) */
+@media (min-width: 992px) and (max-width: 1499px) {
+  .pricing-Wrap {
+    height: 2000px;
+
     .pricing-Title {
       display: flex;
       text-align: center;
@@ -917,4 +925,8 @@ body {
       }
     }
   }
+}
+
+.blog {
+  height: 100vh;
 }
